internal nav drop down no longer cuts off when on mobile

--- a/app/assets/stylesheets/components/site/_navbar.scss
+++ b/app/assets/stylesheets/components/site/_navbar.scss
@@ -84,12 +84,12 @@
    margin: 0px;
    padding: 0px;
    width: 0px;
-  display:hidden;
-  opacity: 0%;
+   display:hidden;
+   opacity: 0%;
 }
 
  .animation {
-   position: absolute;
+  position: absolute;
   top: 0px;
   width: 100%;
   }
@@ -196,6 +196,16 @@
   color: #e60023;
 }
 
+.internal-nav-right .dropdown-content a{
+  text-align: right;
+}
+
+.internal-nav-right .dropdown-content {
+  position: absolute;
+  align-content: space-between;
+  left: -60px;
+}
+
 .internal-nav-right {
   display: flex;
   flex-direction: row;
@@ -219,8 +229,9 @@
   display: block;
   text-decoration-color: rgb(17, 17, 17);
   text-size-adjust: 100%;
-  background-color: #efefef;
+  background-color: #ffffff;
   -webkit-font-smoothing: antialiased;
+  box-shadow: none;
 }
 
 .dropbtn {
@@ -234,7 +245,7 @@
   margin: 8px;
   border: none;
   cursor: pointer;
-  background-color: #efefef;
+  background-color: #ffffff;
   display: block;
   align-content: center;
 }
